--- a/projects/splunk/roles/enterprise/defaults/main.yml
+++ b/projects/splunk/roles/enterprise/defaults/main.yml
@@ -1,10 +1,12 @@
 ---
-# UF vars
+# splunk default vars
 infr_ds_uri: foo.ds_server.com:8089
-splunk_role: infr_ds
-splunk_home: /opt/splunk/infr_ds
+splunk_role: sh
+splunk_web: 0
+splunk_kvstore: 1
+splunk_home: /opt/splunk/sh
 splunk_root: /opt/splunk
-splunkd_mgmt_port: 28089
+splunkd_mgmt_port: 8089
 splunk_git_repo: 'ssh://jslay@127.0.0.1:2222/Users/jslay/Projects/splunk/enterprise/linux/splunk'
 splunk_admin_pass: '@thL0n64'
 splunk_user: splunk
