Mostly working...pre CM and dynamic DS

--- a/etc/ansible.cfg
+++ b/etc/ansible.cfg
@@ -1,5 +1,7 @@
 [defaults]
+forks = 50
 host_key_checking = False
 
 [ssh_connection]
-ssh_args = " -F /Users/jslay/.ssh/ssh_config"
+ssh_args = " -F /Users/jslay/.ssh/config"
+Pipelining = True
