--- a/projects/splunk/handlers/main.yml
+++ b/projects/splunk/handlers/main.yml
@@ -2,9 +2,17 @@
 
 - name: Restart Splunk
   service: name="splunk-{{ splunk_role }}" state=restarted
+  become: yes
 
 - name: Start Splunk
   service: name="splunk-{{ splunk_role }}" state=started
+  become: yes
 
 - name: Stop Splunk
   service: name="splunk-{{ splunk_role }}" state=stopped
+  become: yes
+
+- name: Start Splunk FTR
+  command: "{{ splunk_home }}/bin/splunk start --accept-license --answer-yes --no-prompt"
+  become: yes
+  become_user: "{{ splunk_user }}"
