--- a/projects/splunk/roles/uf/templates/deploymentclient.conf
+++ b/projects/splunk/roles/uf/templates/deploymentclient.conf
@@ -1,4 +1,5 @@
 [deployment-client]
+clientName = {{ splunk_clientName }}
 
 [target-broker:deploymentServer]
-targetUri = {{ds_uri}}
+targetUri = {{ ds_uri }}
