--- a/etc/ec2.ini
+++ b/etc/ec2.ini
@@ -13,8 +13,8 @@
 # separated list of regions. E.g. 'us-east-1,us-west-1,us-west-2' and do not
 # provide the 'regions_exclude' option. If this is set to 'auto', AWS_REGION or
 # AWS_DEFAULT_REGION environment variable will be read to determine the region.
-regions = all
-regions_exclude = us-gov-west-1, cn-north-1
+regions = us-east-1,us-west-1,us-east-2,us-west-2
+#regions_exclude = us-gov-west-1, cn-north-1
 
 # When generating inventory, Ansible needs to know how to address a server.
 # Each EC2 instance has a lot of variables associated with it. Here is the list:
@@ -29,7 +29,7 @@ regions_exclude = us-gov-west-1, cn-north-1
 # address, and should set this to 'private_dns_name'. The key of an EC2 tag
 # may optionally be used; however the boto instance variables hold precedence
 # in the event of a collision.
-destination_variable = public_dns_name
+destination_variable = private_dns_name
 
 # This allows you to override the inventory_name with an ec2 variable, instead
 # of using the destination_variable above. Addressing (aka ansible_ssh_host)
@@ -45,7 +45,8 @@ destination_variable = public_dns_name
 # WARNING: - instances that are in the private vpc, _without_ public ip address
 # will not be listed in the inventory until You set:
 # vpc_destination_variable = private_ip_address
-vpc_destination_variable = ip_address
+# vpc_destination_variable = private_ip_address
+vpc_destination_variable = private_dns_name
 
 # The following two settings allow flexible ansible host naming based on a
 # python format string and a comma-separated list of ec2 tags.  Note that:
