--- a/projects/splunk/roles/uf/defaults/main.yml
+++ b/projects/splunk/roles/uf/defaults/main.yml
@@ -1,11 +1,12 @@
 ---
 # UF vars
-ds_uri: 52.88.54.180:28089
+ds_uri: 172.31.24.203:28089 
 splunk_role: uf
 splunk_home: /opt/splunk/uf
 splunk_root: /opt/splunk
-splunkd_mgmt_port: 18089
+splunkd_mgmt_port: 8089
 splunk_git_repo: 'ssh://jslay@127.0.0.1:2222/Users/jslay/Projects/splunk/uf/linux/splunkforwarder'
 splunk_admin_pass: '@thL0n64'
-splunk_user: splunk
+splunk_user: root
 splunk_group: splunk
+splunk_clientName: uf
