--- a/projects/splunk/roles/uf/tasks/install.yml
+++ b/projects/splunk/roles/uf/tasks/install.yml
@@ -6,11 +6,14 @@
 - name: Check for existing /opt/splunk/uf that isn't a git managed install.
   stat: path="{{ splunk_home }}"
   register: uf_path
+  become: true
 
 - name: Stop splunk if running
   command: "{{ splunk_home }}/bin/splunk stop"
   ignore_errors: True
   when: uf_path.stat.isdir is defined
+  become: true
+  become_user: "{{ splunk_user }}"
 
 - name: Remove old UF dir
   file: path={{ splunk_home }} state=absent
@@ -22,7 +25,7 @@
   become: yes
 
 - name: Chmod and Chown shit.
-  file: dest={{ splunk_root }} owner={{ splunk_user }} group={{ splunk_group }} recurse=yes 
+  file: dest={{ splunk_home }} owner={{ splunk_user }} group={{ splunk_group }} recurse=yes 
   become: yes
 
 - name: Copy web.conf for splunk UF
