Updating for US East migration

--- a/etc/ansible.cfg
+++ b/etc/ansible.cfg
@@ -1,6 +1,8 @@
 [defaults]
 forks = 50
 host_key_checking = False
+inventory = /Users/jslay/Projects/ansible/etc
+log_path=/Users/jslay/logs/ansible/ansible.log
 
 [ssh_connection]
 ssh_args = " -F /Users/jslay/.ssh/config"
