--- a/projects/splunk/roles/cm/defaults/main.yml
+++ b/projects/splunk/roles/cm/defaults/main.yml
@@ -15,3 +15,4 @@ splunk_cluster_label: jkscluster
 splunk_sf: 2
 splunk_rf: 2
 splunk_cluster_mode: master
+splunk_lm_uri: https://172.31.17.154:8089
