--- a/projects/splunk/roles/cm/meta/main.yml
+++ b/projects/splunk/roles/cm/meta/main.yml
@@ -1,3 +1,8 @@
 ---
 dependencies:
-  - role: enterprise
+  - { role: enterprise, 
+      splunk_home: /opt/splunk/cm,
+      splunk_web_enabled: 0,
+      splunk_kvstore_disabled: 1,
+      splunk_role: cm
+     }
