--- a/projects/splunk/roles/cm/tasks/main.yml
+++ b/projects/splunk/roles/cm/tasks/main.yml
@@ -25,9 +25,27 @@
   become_user: "{{ splunk_user }}"
   register: outputs
 
+- name: Copy web.conf for splunk 
+  template: src=web.conf dest="{{ splunk_home }}/etc/system/local/web.conf" mode=650
+  become: yes
+  become_user: "{{ splunk_user }}"
+  register: web_conf
+
+- name: Copy init script to init.d
+  template: src=splunk_init dest="/etc/init.d/splunk-{{ splunk_role }}" mode=700
+  become: yes
+  register: init
+
+- name: Generate init symlinks
+  command: "/sbin/chkconfig splunk-{{ splunk_role }} --add"
+  become: yes
+
+- name: Set init runlevels
+  command: "/sbin/chkconfig splunk-{{ splunk_role }} on --level 235"
+  become: yes
+
 - name: Restart splunk 
   service: name="splunk-{{ splunk_role }}" state=restarted enabled=yes 
   become: yes
-  when: server_conf.changed
-
+  when: (server_conf.changed or init.changed or web_conf.changed)
 
