--- a/projects/splunk/roles/ds/defaults/main.yml
+++ b/projects/splunk/roles/ds/defaults/main.yml
@@ -1,12 +1,13 @@
 ---
 # splunk default vars
-splunk_role: hf
-splunk_web_enabled: 0
-splunk_kvstore_disabled: 1
-splunk_home: /opt/splunk/hf
+splunk_role: ds
+splunk_web: 0
+splunk_kvstore: 1
+splunk_home: /opt/splunk/ds
 splunk_root: /opt/splunk
 splunkd_mgmt_port: 8089
 splunk_git_repo: 'ssh://jslay@127.0.0.1:2222/Users/jslay/Projects/splunk/enterprise/linux/splunk'
 splunk_admin_pass: '@thL0n64'
 splunk_user: splunk
 splunk_group: splunk
+splunk_lm_uri: https://172.31.17.154:8089
