--- a/projects/splunk/roles/idx/defaults/main.yml
+++ b/projects/splunk/roles/idx/defaults/main.yml
@@ -13,3 +13,4 @@ splunk_group: splunk
 splunk_cluster_key: jksclusterkey
 splunk_cluster_mode: slave
 splunk_cm_uri: https://172.31.17.69:8089
+splunk_lm_uri: https://172.31.17.154:8089
