--- a/projects/splunk/roles/sh/meta/main.yml
+++ b/projects/splunk/roles/sh/meta/main.yml
@@ -1,3 +1,8 @@
 ---
 dependencies:
-  - role: enterprise
+  - { role: enterprise, 
+      splunk_home: /opt/splunk/sh,
+      splunk_web_enabled: 1,
+      splunk_kvstore_disabled: 0,
+      splunk_role: sh
+     }
