--- a/projects/splunk/roles/sh/tasks/main.yml
+++ b/projects/splunk/roles/sh/tasks/main.yml
@@ -14,4 +14,32 @@
   when: item.rc != 0 and item.rc != 24
   with_items: "{{ add_peer_results.results }}"
 
+- name: Copy server.conf for splunk 
+  template: src=server.conf dest="{{ splunk_home }}/etc/system/local/server.conf" mode=650
+  become: yes
+  become_user: "{{ splunk_user }}"
+  register: server_conf
 
+- name: Copy web.conf for splunk 
+  template: src=web.conf dest="{{ splunk_home }}/etc/system/local/web.conf" mode=650
+  become: yes
+  become_user: "{{ splunk_user }}"
+  register: web_conf
+
+- name: Copy init script to init.d
+  template: src=splunk_init dest="/etc/init.d/splunk-{{ splunk_role }}" mode=700
+  become: yes
+  register: init
+
+- name: Generate init symlinks
+  command: "/sbin/chkconfig splunk-{{ splunk_role }} --add"
+  become: yes
+
+- name: Set init runlevels
+  command: "/sbin/chkconfig splunk-{{ splunk_role }} on --level 235"
+  become: yes
+
+- name: Restart splunk 
+  service: name="splunk-{{ splunk_role }}" state=restarted enabled=yes 
+  become: yes
+  when: (server_conf.changed or init.changed or web_conf.changed)
