--- a/projects/splunk/roles/cm/templates/server.conf
+++ b/projects/splunk/roles/cm/templates/server.conf
@@ -1,5 +1,8 @@
 [default]
 
+[general]
+serverName = {{ splunk_role }}-{{ inventory_hostname }}
+
 [kvstore]
 disabled = {{ splunk_kvstore_disabled }}
 
