--- a/projects/splunk/roles/ds/tasks/main.yml
+++ b/projects/splunk/roles/ds/tasks/main.yml
@@ -50,5 +50,5 @@
 - name: Restart splunk 
   service: name="splunk-{{ splunk_role }}" state=restarted enabled=yes 
   become: yes
-  when: (server_conf.changed or init.changed or web_conf.changed or outputs.changed or sc.changed))
+  when: (server_conf.changed or init.changed or web_conf.changed or outputs.changed or sc.changed)
 
