--- a/projects/splunk/roles/cm/defaults/main.yml
+++ b/projects/splunk/roles/cm/defaults/main.yml
@@ -1,11 +1,11 @@
 ---
 # splunk default vars
 splunk_role: cm
-splunk_web: 0
-splunk_kvstore: 1
+splunk_web_enabled: 0
+splunk_kvstore_disabled: 1
 splunk_home: /opt/splunk/cm
 splunk_root: /opt/splunk
-splunkd_mgmt_port: 8089
+splunkd_mgmt_port: 18089
 splunk_git_repo: 'ssh://jslay@127.0.0.1:2222/Users/jslay/Projects/splunk/enterprise/linux/splunk'
 splunk_admin_pass: '@thL0n64'
 splunk_user: splunk
