--- a/projects/splunk/roles/idx/defaults/main.yml
+++ b/projects/splunk/roles/idx/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
 # splunk default vars
 splunk_role: idx
-splunk_web: 0
-splunk_kvstore: 1
+splunk_web_enabled: 0
+splunk_kvstore_disabled: 1
 splunk_home: /opt/splunk/idx
 splunk_root: /opt/splunk
 splunkd_mgmt_port: 8089
@@ -12,5 +12,6 @@ splunk_user: splunk
 splunk_group: splunk
 splunk_cluster_key: jksclusterkey
 splunk_cluster_mode: slave
-splunk_cm_uri: https://172.31.17.69:8089
+splunk_cluster_label: jkscluster
+splunk_cm_uri: https://172.31.10.234:18089
 splunk_lm_uri: https://172.31.17.154:8089
