--- a/projects/splunk/roles/sh/templates/server.conf
+++ b/projects/splunk/roles/sh/templates/server.conf
@@ -1,5 +1,8 @@
 [default]
 
+[general]
+serverName = {{ splunk_role }}-{{ inventory_hostname }}
+
 [kvstore]
 disabled = {{ splunk_kvstore_disabled }}
 
@@ -7,3 +10,4 @@ disabled = {{ splunk_kvstore_disabled }}
 master_uri = {{ splunk_cm_uri }}
 mode = {{ splunk_cluster_mode }}
 pass4SymmKey = {{ splunk_cluster_key }}
+cluster_label = {{ splunk_cluster_label }}
