--- a/projects/splunk/site.yml
+++ b/projects/splunk/site.yml
@@ -1,11 +1,8 @@
 ---
-- hosts: all
-  gather_facts: False
-  
-  tasks:
-  - name: install python 2
-    raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
-    become: yes
+- hosts: utility
+  become: no
+  roles:
+  - common
 
 - hosts: universal_forwarders
   become: no
