Initial working copy...UF only added as host group 'clients'

--- a/projects/splunk/roles/cm/handlers/main.yml
+++ b/projects/splunk/roles/cm/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Restart Splunk
-  service: name="splunk-{{ splunk_role }}" state=restarted
+  command: "/etc/init.d/splunk-{{ splunk_role }} restart"
   become: yes
 
 - name: Start Splunk
