--- a/projects/splunk/roles/cm/tasks/main.yml
+++ b/projects/splunk/roles/cm/tasks/main.yml
@@ -6,13 +6,15 @@
   template: src=server.conf dest="{{ splunk_home }}/etc/system/local/server.conf" mode=650
   become: yes
   become_user: "{{ splunk_user }}"
-  register: server_conf
+  notify:
+    - Restart Splunk
 
 - name: Add master-apps
   unarchive: src=master-apps.tgz dest="{{ splunk_home }}/etc/master-apps"
   become: yes
   become_user: "{{ splunk_user }}"
-  register: ma
+  notify:
+    - Restart Splunk
 
 - name: Deploy bundle to cluster peers
   command: "{{ splunk_home }}/bin/splunk apply cluster-bundle --answer-yes -auth {{ splunk_user }}:{{ splunk_admin_pass }}"
@@ -23,18 +25,19 @@
   template: src=outputs.conf dest="{{ splunk_home }}/etc/system/local/outputs.conf" mode=660
   become: yes
   become_user: "{{ splunk_user }}"
-  register: outputs
+  notify:
+    - Restart Splunk
 
 - name: Copy web.conf for splunk 
   template: src=web.conf dest="{{ splunk_home }}/etc/system/local/web.conf" mode=650
   become: yes
   become_user: "{{ splunk_user }}"
-  register: web_conf
+  notify:
+    - Restart Splunk
 
 - name: Copy init script to init.d
   template: src=splunk_init dest="/etc/init.d/splunk-{{ splunk_role }}" mode=700
   become: yes
-  register: init
 
 - name: Generate init symlinks
   command: "/sbin/chkconfig splunk-{{ splunk_role }} --add"
@@ -43,9 +46,4 @@
 - name: Set init runlevels
   command: "/sbin/chkconfig splunk-{{ splunk_role }} on --level 235"
   become: yes
-
-- name: Restart splunk 
-  service: name="splunk-{{ splunk_role }}" state=restarted enabled=yes 
-  become: yes
-  when: (outputs.changed or server_conf.changed or init.changed or web_conf.changed)
 
