--- a/projects/splunk/roles/common/tasks/main.yml
+++ b/projects/splunk/roles/common/tasks/main.yml
@@ -43,7 +43,7 @@
   become: yes
 
 - name: Create and Chown shit.
-  file: dest={{ splunk_root }} owner={{ splunk_user }} group={{ splunk_group }} recurse=yes state=directory
+  file: dest={{ splunk_root }} owner={{ splunk_user }} group={{ splunk_group }} state=directory
   become: yes
 
 - name: Update splunk user pub/auth keys 
