--- a/projects/splunk/roles/enterprise/tasks/install.yml
+++ b/projects/splunk/roles/enterprise/tasks/install.yml
@@ -20,30 +20,53 @@
   when: path.stat.isdir is defined
   become: yes
 
+- name: Chmod and Chown shit.
+  file: dest={{ splunk_root }} owner={{ splunk_user }} group={{ splunk_group }} 
+  become: yes
+
 - name: Checkout Latest Splunk bits from Git
   git: repo={{ splunk_git_repo }} dest={{ splunk_home }} accept_hostkey=yes force=yes
   become: yes
-
-- name: Chmod and Chown shit.
-  file: dest={{ splunk_root }} owner={{ splunk_user }} group={{ splunk_group }} recurse=yes 
-  become: yes
-
-- name: Copy server.conf for splunk 
-  template: src=server.conf dest="{{ splunk_home }}/etc/system/local/server.conf" mode=650
-  become: yes
   become_user: "{{ splunk_user }}"
 
-- name: Copy web.conf for splunk 
-  template: src=web.conf dest="{{ splunk_home }}/etc/system/local/web.conf" mode=650
+- name: Set server.conf configs
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/server.conf" 
+    mode: 0650
+    section: kvstore
+    option: disabled
+    value: "{{ splunk_kvstore_disabled }}"
+    backup: yes
   become: yes
   become_user: "{{ splunk_user }}"
   notify:
-    - Start Splunk FTR
+    - Restart Splunk
 
-- name: Set splunk admin password
-  command: "{{ splunk_home }}/bin/splunk edit user admin -password {{ splunk_admin_pass }} -auth admin:changeme"
+- name: Set web.conf configs (1)
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/web.conf" 
+    mode: 0650
+    section: settings
+    option: mgmtHostPort
+    value: "0:{{splunkd_mgmt_port}}"
+    backup: yes
   become: yes
   become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
+
+- name: Set web.conf configs (2)
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/web.conf" 
+    mode: 0650
+    section: settings
+    option: startwebserver
+    value: "{{splunk_web_enabled}}"
+    backup: yes
+  become: yes
+  become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
 
 - name: Copy init script to init.d
   template: src=splunk_init dest="/etc/init.d/splunk-{{ splunk_role }}" mode=700
@@ -56,3 +79,14 @@
 - name: Set init runlevels
   command: "/sbin/chkconfig splunk-{{ splunk_role }} on --level 235"
   become: yes
+
+- name: Start Splunk
+  command: "{{ splunk_home }}/bin/splunk start --accept-license --no-prompt --answer-yes"
+  become: yes
+  become_user: "{{ splunk_user }}"
+
+- name: Set splunk admin password
+  command: "{{ splunk_home }}/bin/splunk edit user admin -password {{ splunk_admin_pass }} -auth admin:changeme"
+  become: yes
+  become_user: "{{ splunk_user }}"
+
