--- a/projects/splunk/roles/uf/tasks/install.yml
+++ b/projects/splunk/roles/uf/tasks/install.yml
@@ -25,23 +25,60 @@
   become: yes
 
 - name: Chmod and Chown shit.
-  file: dest={{ splunk_home }} owner={{ splunk_user }} group={{ splunk_group }} recurse=yes 
+  file: dest={{ splunk_home }} owner={{ splunk_user }} group={{ splunk_group }} 
   become: yes
 
-- name: Copy web.conf for splunk UF
-  template: src=web.conf dest="{{ splunk_home }}/etc/system/local/web.conf" mode=650
+- name: Set web.conf configs
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/web.conf" 
+    mode: 0650
+    section: settings
+    option: mgmtHostPort
+    value: "0:{{splunkd_mgmt_port}}"
+    backup: yes
   become: yes
   become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
 
-- name: Copy server.conf for splunk UF
-  template: src=server.conf dest="{{ splunk_home }}/etc/system/local/server.conf" mode=650
+- name: Set server.conf configs
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/server.conf" 
+    mode: 0650
+    section: general
+    option: serverName
+    value: "{{ splunk_role }}-{{ inventory_hostname }}"
+    backup: yes
   become: yes
   become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
 
-- name: Copy deploymentclient.conf
-  template: src=deploymentclient.conf dest="{{ splunk_home }}/etc/system/local/deploymentclient.conf" mode=650
+- name: Set Deployment Client Configs (1)
+  ini_file: 
+    path: "{{ splunk_home }}/etc/system/local/deploymentclient.conf"
+    section: deployment-client
+    option: clientName
+    value: "{{ splunk_clientName }}"
+    mode: 0650
+    backup: yes
   become: yes
   become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
+
+- name: Set Deployment Client Configs (2)
+  ini_file: 
+    path: "{{ splunk_home }}/etc/system/local/deploymentclient.conf"
+    section: "target-broker:deploymentServer"
+    option: targetUri
+    value: "{{ ds_uri }}"
+    mode: 0650
+    backup: yes
+  become: yes
+  become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
 
 - name: Copy init script to init.d
   template: src=splunk_init dest="/etc/init.d/splunk-{{ splunk_role }}" mode=700
@@ -56,8 +93,9 @@
   become: yes
 
 - name: Start Splunk
-  service: name="splunk-{{ splunk_role }}" state=started enabled=yes
+  command: "{{ splunk_home }}/bin/splunk start --accept-license --no-prompt --answer-yes"
   become: yes
+  become_user: "{{ splunk_user }}"
 
 - name: Set splunk uf admin password
   command: "{{ splunk_home }}/bin/splunk edit user admin -password {{ splunk_admin_pass }} -auth admin:changeme"
